trunk/ODIN_II/ODIN_II/SRC/verilog_bison.output
Terminals which are not used

   vDEFPARAM
   vNOT_SUPPORT


Grammar

    0 $accept: source_text $end

    1 source_text: items

    2 items: items module
    3      | items define
    4      | module
    5      | define

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID

    7 module: vMODULE vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

   10 list_of_module_items: list_of_module_items module_item
   11                     | module_item

   12 module_item: parameter_declaration
   13            | input_declaration
   14            | output_declaration
   15            | inout_declaration
   16            | net_declaration
   17            | continuous_assign
   18            | gate_declaration
   19            | module_instantiation
   20            | always

   21 parameter_declaration: vPARAMETER variable_list ';'

   22 input_declaration: vINPUT variable_list ';'

   23 output_declaration: vOUTPUT variable_list ';'

   24 inout_declaration: vINOUT variable_list ';'

   25 net_declaration: vWIRE variable_list ';'
   26                | vREG variable_list ';'

   27 variable_list: variable_list ',' variable
   28              | variable

   29 variable: vSYMBOL_ID
   30         | '[' expression ':' expression ']' vSYMBOL_ID
   31         | '[' expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   32         | '[' expression ':' expression ']' vSYMBOL_ID '=' primary
   33         | vSYMBOL_ID '=' primary

   34 continuous_assign: vASSIGN blocking_assignment ';'

   35 gate_declaration: vAND gate_instance ';'
   36                 | vNAND gate_instance ';'
   37                 | vNOR gate_instance ';'
   38                 | vNOT gate_instance ';'
   39                 | vOR gate_instance ';'
   40                 | vXNOR gate_instance ';'
   41                 | vXOR gate_instance ';'

   42 gate_instance: vSYMBOL_ID '(' expression ',' expression ',' expression ')'
   43              | '(' expression ',' expression ',' expression ')'
   44              | vSYMBOL_ID '(' expression ',' expression ')'
   45              | '(' expression ',' expression ')'

   46 module_instantiation: vSYMBOL_ID module_instance

   47 module_instance: vSYMBOL_ID '(' list_of_module_connections ')' ';'
   48                | vSYMBOL_ID '(' ')' ';'

   49 list_of_module_connections: list_of_module_connections ',' module_connection
   50                           | module_connection

   51 module_connection: '.' vSYMBOL_ID '(' expression ')'
   52                  | expression

   53 always: vALWAYS delay_control statement

   54 statement: seq_block
   55          | blocking_assignment ';'
   56          | non_blocking_assignment ';'
   57          | vIF '(' expression ')' statement
   58          | vIF '(' expression ')' statement vELSE statement
   59          | vCASE '(' expression ')' case_item_list vENDCASE
   60          | ';'

   61 blocking_assignment: primary '=' expression

   62 non_blocking_assignment: primary voLTE expression

   63 case_item_list: case_item_list case_items
   64               | case_items

   65 case_items: expression ':' statement
   66           | vDEFAULT ':' statement

   67 seq_block: vBEGIN stmt_list vEND

   68 stmt_list: stmt_list statement
   69          | statement

   70 delay_control: '@' '(' event_expression_list ')'

   71 event_expression_list: event_expression_list vOR event_expression
   72                      | event_expression

   73 event_expression: primary
   74                 | vPOSEDGE vSYMBOL_ID
   75                 | vNEGEDGE vSYMBOL_ID

   76 expression: primary
   77           | '+' expression
   78           | '-' expression
   79           | '~' expression
   80           | '&' expression
   81           | '|' expression
   82           | voNAND expression
   83           | voNOR expression
   84           | voXNOR expression
   85           | '!' expression
   86           | '^' expression
   87           | expression '^' expression
   88           | expression '*' expression
   89           | expression '/' expression
   90           | expression '%' expression
   91           | expression '+' expression
   92           | expression '-' expression
   93           | expression '&' expression
   94           | expression '|' expression
   95           | expression voNAND expression
   96           | expression voNOR expression
   97           | expression voXNOR expression
   98           | expression '<' expression
   99           | expression '>' expression
  100           | expression voSRIGHT expression
  101           | expression voSLEFT expression
  102           | expression voEQUAL expression
  103           | expression voNOTEQUAL expression
  104           | expression voLTE expression
  105           | expression voGTE expression
  106           | expression voCASEEQUAL expression
  107           | expression voCASENOTEQUAL expression
  108           | expression voOROR expression
  109           | expression voANDAND expression
  110           | expression '?' expression ':' expression
  111           | '(' expression ')'

  112 primary: vNUMBER_ID
  113        | vSYMBOL_ID
  114        | vSYMBOL_ID '[' expression ']'
  115        | vSYMBOL_ID '[' expression ':' expression ']'
  116        | '{' expression_list '}'

  117 expression_list: expression_list ',' expression
  118                | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 85
'%' (37) 90
'&' (38) 80 93
'(' (40) 7 8 9 42 43 44 45 47 48 51 57 58 59 70 111
')' (41) 7 8 9 42 43 44 45 47 48 51 57 58 59 70 111
'*' (42) 88
'+' (43) 77 91
',' (44) 8 27 42 43 44 45 49 117
'-' (45) 78 92
'.' (46) 51
'/' (47) 89
':' (58) 30 31 32 65 66 110 115
';' (59) 7 8 9 21 22 23 24 25 26 34 35 36 37 38 39 40 41 47 48 55 56
    60
'<' (60) 98
'=' (61) 32 33 61
'>' (62) 99
'?' (63) 110
'@' (64) 70
'[' (91) 30 31 32 114 115
']' (93) 30 31 32 114 115
'^' (94) 86 87
'{' (123) 116
'|' (124) 81 94
'}' (125) 116
'~' (126) 79
error (256)
vSYMBOL_ID (258) 6 7 8 9 29 30 31 32 33 42 44 46 47 48 51 74 75 113
    114 115
vNUMBER_ID (259) 6 112
vALWAYS (260) 53
vAND (261) 35
vASSIGN (262) 34
vBEGIN (263) 67
vCASE (264) 59
vDEFAULT (265) 66
vDEFINE (266) 6
vELSE (267) 58
vEND (268) 67
vENDCASE (269) 59
vENDMODULE (270) 7 8 9
vIF (271) 57 58
vINOUT (272) 24
vINPUT (273) 22
vMODULE (274) 7 8 9
vNAND (275) 36
vNEGEDGE (276) 75
vNOR (277) 37
vNOT (278) 38
vOR (279) 39 71
vOUTPUT (280) 23
vPARAMETER (281) 21
vPOSEDGE (282) 74
vREG (283) 26
vWIRE (284) 25
vXNOR (285) 40
vXOR (286) 41
vDEFPARAM (287)
voANDAND (288) 109
voOROR (289) 108
voLTE (290) 62 104
voGTE (291) 105
voSLEFT (292) 101
voSRIGHT (293) 100
voEQUAL (294) 102
voNOTEQUAL (295) 103
voCASEEQUAL (296) 106
voCASENOTEQUAL (297) 107
voXNOR (298) 84 97
voNAND (299) 82 95
voNOR (300) 83 96
vNOT_SUPPORT (301)
LOWER_THAN_ELSE (302)


Nonterminals, with rules where they appear

$accept (73)
    on left: 0
source_text (74)
    on left: 1, on right: 0
items (75)
    on left: 2 3 4 5, on right: 1 2 3
define (76)
    on left: 6, on right: 3 5
module (77)
    on left: 7 8 9, on right: 2 4
list_of_module_items (78)
    on left: 10 11, on right: 7 8 9 10
module_item (79)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
parameter_declaration (80)
    on left: 21, on right: 12
input_declaration (81)
    on left: 22, on right: 13
output_declaration (82)
    on left: 23, on right: 14
inout_declaration (83)
    on left: 24, on right: 15
net_declaration (84)
    on left: 25 26, on right: 16
variable_list (85)
    on left: 27 28, on right: 7 8 21 22 23 24 25 26 27
variable (86)
    on left: 29 30 31 32 33, on right: 27 28
continuous_assign (87)
    on left: 34, on right: 17
gate_declaration (88)
    on left: 35 36 37 38 39 40 41, on right: 18
gate_instance (89)
    on left: 42 43 44 45, on right: 35 36 37 38 39 40 41
module_instantiation (90)
    on left: 46, on right: 19
module_instance (91)
    on left: 47 48, on right: 46
list_of_module_connections (92)
    on left: 49 50, on right: 47 49
module_connection (93)
    on left: 51 52, on right: 49 50
always (94)
    on left: 53, on right: 20
statement (95)
    on left: 54 55 56 57 58 59 60, on right: 53 57 58 65 66 68 69
blocking_assignment (96)
    on left: 61, on right: 34 55
non_blocking_assignment (97)
    on left: 62, on right: 56
case_item_list (98)
    on left: 63 64, on right: 59 63
case_items (99)
    on left: 65 66, on right: 63 64
seq_block (100)
    on left: 67, on right: 54
stmt_list (101)
    on left: 68 69, on right: 67 68
delay_control (102)
    on left: 70, on right: 53
event_expression_list (103)
    on left: 71 72, on right: 70 71
event_expression (104)
    on left: 73 74 75, on right: 71 72
expression (105)
    on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
   , on right: 30 31 32 42 43 44 45 51 52 57 58 59 61 62 65 77 78 79
    80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109 110 111 114 115 117 118
primary (106)
    on left: 112 113 114 115 116, on right: 32 33 61 62 73 76
expression_list (107)
    on left: 117 118, on right: 116 117


state 0

    0 $accept: . source_text $end

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    source_text  go to state 3
    items        go to state 4
    define       go to state 5
    module       go to state 6


state 1

    6 define: vDEFINE . vSYMBOL_ID vNUMBER_ID

    vSYMBOL_ID  shift, and go to state 7


state 2

    7 module: vMODULE . vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE . vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE . vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 8


state 3

    0 $accept: source_text . $end

    $end  shift, and go to state 9


state 4

    1 source_text: items .
    2 items: items . module
    3      | items . define

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    $default  reduce using rule 1 (source_text)

    define  go to state 10
    module  go to state 11


state 5

    5 items: define .

    $default  reduce using rule 5 (items)


state 6

    4 items: module .

    $default  reduce using rule 4 (items)


state 7

    6 define: vDEFINE vSYMBOL_ID . vNUMBER_ID

    vNUMBER_ID  shift, and go to state 12


state 8

    7 module: vMODULE vSYMBOL_ID . '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID . '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID . '(' ')' ';' list_of_module_items vENDMODULE

    '('  shift, and go to state 13


state 9

    0 $accept: source_text $end .

    $default  accept


state 10

    3 items: items define .

    $default  reduce using rule 3 (items)


state 11

    2 items: items module .

    $default  reduce using rule 2 (items)


state 12

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID .

    $default  reduce using rule 6 (define)


state 13

    7 module: vMODULE vSYMBOL_ID '(' . variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' . variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' . ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 14
    ')'         shift, and go to state 15
    '['         shift, and go to state 16

    variable_list  go to state 17
    variable       go to state 18


state 14

   29 variable: vSYMBOL_ID .
   33         | vSYMBOL_ID . '=' primary

    '='  shift, and go to state 19

    $default  reduce using rule 29 (variable)


state 15

    9 module: vMODULE vSYMBOL_ID '(' ')' . ';' list_of_module_items vENDMODULE

    ';'  shift, and go to state 20


state 16

   30 variable: '[' . expression ':' expression ']' vSYMBOL_ID
   31         | '[' . expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   32         | '[' . expression ':' expression ']' vSYMBOL_ID '=' primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 35
    primary     go to state 36


state 17

    7 module: vMODULE vSYMBOL_ID '(' variable_list . ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list . ',' ')' ';' list_of_module_items vENDMODULE
   27 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 18

   28 variable_list: variable .

    $default  reduce using rule 28 (variable_list)


state 19

   33 variable: vSYMBOL_ID '=' . primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    '{'         shift, and go to state 32

    primary  go to state 39


state 20

    9 module: vMODULE vSYMBOL_ID '(' ')' ';' . list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 40
    vALWAYS     shift, and go to state 41
    vAND        shift, and go to state 42
    vASSIGN     shift, and go to state 43
    vINOUT      shift, and go to state 44
    vINPUT      shift, and go to state 45
    vNAND       shift, and go to state 46
    vNOR        shift, and go to state 47
    vNOT        shift, and go to state 48
    vOR         shift, and go to state 49
    vOUTPUT     shift, and go to state 50
    vPARAMETER  shift, and go to state 51
    vREG        shift, and go to state 52
    vWIRE       shift, and go to state 53
    vXNOR       shift, and go to state 54
    vXOR        shift, and go to state 55

    list_of_module_items   go to state 56
    module_item            go to state 57
    parameter_declaration  go to state 58
    input_declaration      go to state 59
    output_declaration     go to state 60
    inout_declaration      go to state 61
    net_declaration        go to state 62
    continuous_assign      go to state 63
    gate_declaration       go to state 64
    module_instantiation   go to state 65
    always                 go to state 66


state 21

  113 primary: vSYMBOL_ID .
  114        | vSYMBOL_ID . '[' expression ']'
  115        | vSYMBOL_ID . '[' expression ':' expression ']'

    '['  shift, and go to state 67

    $default  reduce using rule 113 (primary)


state 22

  112 primary: vNUMBER_ID .

    $default  reduce using rule 112 (primary)


state 23

   84 expression: voXNOR . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 68
    primary     go to state 36


state 24

   82 expression: voNAND . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 69
    primary     go to state 36


state 25

   83 expression: voNOR . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 70
    primary     go to state 36


state 26

   81 expression: '|' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 71
    primary     go to state 36


state 27

   86 expression: '^' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 72
    primary     go to state 36


state 28

   80 expression: '&' . expression
